[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-eye"
version = "3.7.0"
description = "Modular reconnaissance / OSINT / exposure-detection toolkit with a web dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ghost Eye contributors" }]
keywords = ["recon", "osint", "security", "dns", "tls", "subdomains", "fingerprint"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

# Core deps are pure-Python so `pip install` works on Termux too.
dependencies = [
    "requests>=2.28",
    "dnspython>=2.2",
    "beautifulsoup4>=4.11",
]

[project.optional-dependencies]
full = [
    "python-whois>=0.8",
    "phonenumbers>=8.13",
    "PyYAML>=6.0",
    "tqdm>=4.66",
    "cloudscraper>=1.2",
    "webtech>=1.3",
    "python-nmap>=0.7.1",
    "cryptography>=42.0",
    "pysnmp>=4.4",
    "mmh3>=4.0",
    "Pillow>=10.0",
    "reportlab>=4.0",
]

[project.scripts]
ghost-eye = "ghost_eye.cli:main"
ghost-eye-web = "ghost_eye.webapp:main"

[tool.setuptools]
packages = ["ghost_eye", "ghost_eye.modules"]

[tool.setuptools.package-data]
ghost_eye = ["web_static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# bug-catching subset only (syntax errors, undefined names) so CI stays green
# on the existing style; tighten locally with `ruff check --select E,F,W,I`.
select = ["E9", "F63", "F7", "F82"]
